--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<pre>
+  {{ contact | json }}
+</pre>
 <div class="container max-w-lg mx-6">
       <form class="bg-white shadow-md w-full max-w-md px-8 pt-6 pb-8 mb-4">
         <h2>Create contact</h2>
@@ -6,8 +9,8 @@
             <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" for="name">
               Name
            </label>
-            <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4 mb-3"
-              id="name" type="password" placeholder="John Doe">
+            <input [(ngModel)]="contact.name" class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4 mb-3"
+              id="name" type="text" name="name" type="password" placeholder="John Doe">
           </div>
         </div>
         <div class="flex flex-wrap -mx-3 mb-6">
@@ -15,15 +18,15 @@
             <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" for="grid-email">
               Email
             </label>
-            <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border rounded py-3 px-4 mb-3" id="grid-email"
-              type="email" placeholder="yo@company.com">
+            <input [(ngModel)]="contact.name" class="appearance-none block w-full bg-grey-lighter text-grey-darker border rounded py-3 px-4 mb-3" id="grid-email"
+              type="email" name="email" placeholder="yo@company.com">
           </div>
           <div class="w-full md:w-1/2 px-3">
             <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" for="grid-email">
               Company
             </label>
-            <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4"
-              id="grid-email" type="text" placeholder="Awesome company">
+            <input [(ngModel)]="contact.company" class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4"
+              id="grid-email" name="company" type="text" placeholder="Awesome company">
           </div>
         </div>
         <div class="flex flex-wrap -mx-3 mb-6">
@@ -31,22 +34,22 @@
             <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" for="grid-role">
               Role
             </label>
-            <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4"
-             id="grid-role" type="text" placeholder="Pure Genius">
+            <input [(ngModel)]="contact.role" class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4"
+             id="grid-role"  name="role" type="text" placeholder="Pure Genius">
           </div>
           <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
             <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" for="grid-twitter">
               Twitter
             </label>
-            <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4"
-              id="grid-twitter" type="text" placeholder="johndoe">
+            <input [(ngModel)]="contact.twitter" class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4"
+              id="grid-twitter" name="twitter" type="text" placeholder="johndoe">
           </div>
           <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
             <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" for="grid-location">
               Location
             </label>
-            <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4"
-              id="grid-location" type="text" placeholder="Pretoria">
+            <input [(ngModel)]="contact.location" class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4"
+              id="grid-location" name="location" type="text" placeholder="Pretoria">
           </div>
         </div>
         <div class="flex flex-wrap -mx-3 mb-2">
@@ -54,15 +57,19 @@
             <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" for="grid-notes">
               Notes
             </label>
-            <textarea class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4 mb-3"
-              id="grid-notes" type="password" placeholder="Things to know about this contact"></textarea>
+            <textarea [(ngModel)]="contact.notes" class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4 mb-3"
+              id="grid-notes" name="notes" type="password" placeholder="Things to know about this contact"></textarea>
           </div>
         </div>
      
         <div class="flex items-center justify-between">
-          <button class="bg-orange hover:bg-orange-dark text-white py-2 px-4 rounded" type="button">
+          <button (click)="createContact()" class="bg-orange hover:bg-orange-dark text-white py-2 px-4 rounded" type="button">
             Submit
          </button>
         </div>
       </form>
     </div>
+
+    <pre>
+        {{ contact | json }}
+    </pre>
