--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<pre>
-  {{ contact | json }}
-</pre>
 <div class="container max-w-lg mx-6">
       <form class="bg-white shadow-md w-full max-w-md px-8 pt-6 pb-8 mb-4">
         <h2>Create contact</h2>
@@ -69,7 +66,7 @@
         </div>
       </form>
     </div>
-
-    <pre>
+    <app-contact></app-contact>
+    <!-- <pre>
         {{ contact | json }}
-    </pre>
+    </pre> -->
